--- a/common.css
+++ b/common.css
@@ -59,6 +59,13 @@
   border-right: 1px solid #e9e9e9;
   overflow: auto;
 }
+.rc-cascader-menu-no-data {
+  position: relative;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #d9d9d9;
+}
 .rc-cascader-menu:last-child {
   border-right: 0;
 }
